# asdf-lightkurve

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pr.yml
src/asdf_lightkurve/: __init__.py  model.py
tests/: test_sanity.py
